--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -1,1 +1,4 @@
-<p>documentation works!</p>
+<div class="tekstas">
+<p>On this webpage, you can get a randomly generated doge. Just with a click of a <span>button</span>!</p>
+<p>The API consists of 10 dog photos. Feel free to find them all !</p>
+</div>
