--- a/src/app/documentation/documentation.component.css
+++ b/src/app/documentation/documentation.component.css
@@ -1,4 +1,16 @@
 *{
     width: 1385px;
-    text-align: center;
+    text-align: left;
+    font-family: 'Karla', sans-serif;
+    color: #333333;  
+    font-size: 20px;
+    margin-top: 18px;
+    line-height: 1.8; 
+    
+}
+span{
+    color: #1a91db;
+}
+.tekstas{
+    margin-top: 80px;
 }
