--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,11 +2,10 @@
 <img src="assets/dog-api-logo.svg" routerLink='' class="logo">
 <h1>Doge API</h1>
 
-<a class="link" routerLink='documentation'>Documentation</a>
-<a class="link">Breeds list</a>
-<a class="link">About</a>
-<a class="link">Submit your dog</a>
+<a class="link" routerLink=''>Home page</a>
+<a class="link" routerLink='documentation'>About</a>
 
 
-<a class="githublink" (click)="goToLink('https://github.com/ArnasStanislovaitis')">View on GitHub</a>
+
+<a class="githublink" (click)="goToLink('https://github.com/ArnasStanislovaitis/Suniukai')">View on GitHub</a>
 </div>
